2012-09-14  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* connector.cc (Connector::initialize): Sort input and output
	subconnectors according to different criteria in order to obtain
	the communication schedule described in Mikael Djurfeldt et
	al. (2005) "Massively parallel simulation of brain-scale neuronal
	network models."

	* music/connector.hh (Connector::isInput)
	(InputConnector::isInput): New member function.

	* music/subconnector.hh (Sbconnector::localRank): New member
	function.

2012-09-08  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/clock.hh, clock.cc (Clock::reset): New member function.

2012-09-04  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* scheduler.cc (Scheduler::nextCommunication): Make sure that all
	events from the first point in time are scheduled.

	* music/scheduler.hh (SConnection): Renamed from Connection in
	order not to be confused with connection.hh::Connection.

	* connector.cc (Connector::isProxy): New member function.

	* music/scheduler.hh, scheduler.cc (Scheduler::addConnection): New
	argument multiComm.
	(Scheduler::Connection): New member multiComm.

	* music/temporal.hh, temporal.cc (ConnectionDescriptor): New
	member multiComm.
	(TemporalNegotiator::collectNegotiationData): Set multiComm.
	(TemporalNegotiator::fillScheduler): Pass multiComm to
	Scheduler::addConnection.

2012-09-03  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* scheduler.cc (Scheduler::initialize): Setup ProxyConnector
	representing a distant connection.

	* music/scheduler.hh (Scheduler::Node): New member functions
	leader and nProcs.

	* music/scheduler.hh, scheduler.cc (Scheduler::addNode,
	Scheduler::Node::Node): New arguments leader and nProcs.

	* music/setup.hh, setup.cc (Setup::nProcs): New member function.

	* music/temporal.hh (TemporalNegotiationData): Added new members
	leader and nProcs.

	* temporal.cc (TemporalNegotiator::collectNegotiationData): Set
	leader and nProcs.
	(TemporalNegotiator::fillScheduler): Pass leader and nProcs to