@@ -157,9 +157,13 @@ namespace MUSIC {
   bool
   lessOutputSubconnector (const Subconnector* c1, const Subconnector* c2)
   {
-    return ((c1->remoteRank () >= c1->localRank ()
-	     && c2->remoteRank () < c1->localRank ())
-	    || lessInputSubconnector (c1, c2));
+    if ((c1->remoteRank () > c1->localRank ()
+	 && c2->remoteRank () < c1->localRank ())
+	|| (c1->remoteRank () < c1->localRank ()
+	    && c2->remoteRank () > c1->localRank ()))
+      return c1->remoteRank () > c2->remoteRank ();
+    else
+      return lessInputSubconnector (c1, c2);
   }
 
 
